<resources>
    <string name="app_name">Test_main_music_app</string>
    <string name="no_account">Not have account? <b>Sign Up</b></string>
    <string name="have_account">You have a account? <b>Login</b></string>
    <string name="world_of_music">World of music</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_main_music_app">First main music app</string>
    <string name="cover">cover</string>
    <string name="song_name">Song Name</string>
    <string name="back_btn">Back</string>
    <string name="favourite_btn">Favourites</string>
    <string name="start_tv">00:00</string>
    <string name="end_tv">Loading..</string>
    <string name="reapet_btn">Repeat</string>
    <string name="equalizer_btn">Equalizer</string>
    <string name="timer_btn">Timer</string>
    <string name="share_btn">Share</string>
    <string name="todo">TODO</string>
    <string name="card_view">card view test</string>


    <string-array name="theloai">
        <item>Nhac Rap</item>
        <item>Nhac chill</item>
        <item>Nhac lofi</item>
        <item>Nhac pop</item>
    </string-array>
</resources>